istio-resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: panopticon
  labels:
    istio-injection: enabled
